# Fritzing2Kicad

./: Doxyfile.in  Makefile.am  README.md  configure.ac
BuildData/: Makefile.am
BuildScripts/: Makefile.am  tcldoxyfilter.sh
ExtraDoc/: Version.tcl
Scripts/: Fritzing2Kicad.tcl  Makefile.am
